--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,19 @@
-{% include head.html %}
+<!DOCTYPE html>
+<html>
 
-    <h1>{{ page.title }}</h1>
+  {% include head.html %}
 
-    {{ content }}
+    <body>
 
-{% include footer.html %}
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="wrap">
+      {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+    </body>
+</html>
