--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,8 @@ a:visited { color: #B40B0B; }
   letter-spacing: -1.75px;
   line-height: 1;
   font-weight: 300;
+  font-style: italic;
+  text-align: center;
 }
 
 .post-header .meta {
