--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,6 @@
 <head>
+    <script type="text/javascript" src="//use.typekit.net/jlx4odq.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
