--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,13 @@ a:visited { color: #B40B0B; }
 .site-title:visited {
   display: block;
   color: #333;
-  font-size: 26px;
+  font-size: 36px;
   letter-spacing: -1px;
   float: left;
   line-height: 56px;
   position: relative;
   z-index: 1;
+  text-decoration: none;
 }
 
 .site-nav {
