--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,10 @@ a:visited { color: #B40B0B; }
 /* Home styles */
 /* ----------------------------------------------------------*/
 
-.home h1 { margin-bottom: 25px; }
+.home h1 {
+  margin-bottom: 25px;
+  font-family: "futura-pt", Helvetica, Arial, sans-serif;
+ }
 
 .posts { list-style-type: none; }
 
