--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,7 @@ a:visited { color: #B40B0B; }
   font-weight: 300;
   font-style: italic;
   text-align: center;
+  font-family: "futura-pt", Helvetica, Arial, sans-serif;
 }
 
 .post-header .meta {
@@ -194,6 +195,9 @@ a:visited { color: #B40B0B; }
   color: #818181;
   margin-top: 5px;
   text-align: center;
+  font-family: "futura-pt", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: -.5px;
 }
 
 .post-content { margin: 0 0 30px; padding: 20px 0;}
