--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ a:visited { color: #B40B0B; }
   width: -webkit-calc(35% - 10px);
   width: -moz-calc(35% - 10px);
   width: -o-calc(35% - 10px);
-  width: calc(35% - 10px);
+  width: calc(55% - 10px);
   margin-right: 10px
 }
 .footer-col-2 {
@@ -118,7 +118,8 @@ a:visited { color: #B40B0B; }
 
 .site-footer li,
 .site-footer p {
-  font-size: 15px;
+  font-size: 14px;
+  font-family: "futura-pt", Helvetica, Arial, sans-serif;
   letter-spacing: -.3px;
   color: #828282;
 }
@@ -185,7 +186,6 @@ a:visited { color: #B40B0B; }
   letter-spacing: -1.75px;
   line-height: 1;
   font-weight: 300;
-  font-style: italic;
   text-align: center;
   font-family: "futura-pt", Helvetica, Arial, sans-serif;
 }
