--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,9 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li>Hailey is a UI Developer at <a href="http://www.lonelyplanet.com">Lonely Planet</a> in Nashville, Tenn.</li>
+        <li>Hailey is a Front-end Developer at <a href="http://www.lonelyplanet.com">Lonely Planet</a> in Nashville, Tenn.</li>
         <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        <li><p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.url }}">via RSS</a></p></li>
       </ul>
     </div>
 
